# ready-set-boole

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yml
ex00/: adder.py  test_adder.py
ex01/: multiplier.py  test_multiplier.py
ex02/: gray_code.py  test_gray_code.py
ex03/: eval_formula.py  test_eval_formula.py
ex04/: BoolAST.py  TableBoolAST.py  test_truth_table.py  truth_table.py
ex05/: BoolAST.py  NNFBoolAST.py  nnf.py  test_nnf.py
ex06/: BoolAST.py  cnf.py  test_cnf.py
ex07/: BoolAST.py  sat.py  test_sat.py
ex08/: powerset.py
ex09/: SetAST.py  eval_set.py
ex10/: map.py
ex11/: reverse_map.py
