[tool.poetry]
name = "ready-set-boole"
version = "0.1.0"
description = "An introduction to Boolean Algebra with Python"
authors = ["Sungwoo Park <codest99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beartype = "^0.15.0"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.1"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
